# wfem-public

./: CMakeLists.txt  CMakePresets.json  main.cpp  命令行输出.txt  计算结果 X.csv
cmake/: options.cmake
cmake/find/: FindMetis.cmake  FindPETSc.cmake
cmake/recipes/: spdlog.cmake
sample/: README.md
sample/20250328/: main.cpp
sample/20250408/: CMakeLists.txt  main.cpp
sample/20250707/: CMakeLists.txt  main.cpp  sim_model.json
sample/20250908/: main.cpp
sample/20250909/: main.cpp
src/: CMakeLists.txt
src/fea/: element_factory.hpp  simulation.cpp  simulation.hpp  simulation_impl.cpp  simulation_impl.hpp
src/geom/: CMakeLists.txt  linear_bvh.cpp  linear_bvh.cu  linear_bvh.cuh  optimized_bvh.hpp  polyhedron.hpp
src/numerics/: sparse_matrix.hpp
src/numerics/integrate/: solver.cpp  solver.hpp
src/numerics/linear_solvers/: CMakeLists.txt
